<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quick Logo Design+</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Hints -->

    <string name="hint_comp_name">Company Name</string>
    <string name="hint_enter_full_name">Enter Full Name</string>
    <string name="hint_enter_contact_number">Enter Contact Number</string>
    <string name="hint_enter_email">Enter Email Address</string>
    <string name="hint_enter_Message">Message</string>

    <!-- Hints -->

    <string name="title_activity_svg_view_pager">Quick Logo Design+</string>

    <!--Font Text-->
    <string name="font_text"> ABC </string>
    <string name="pos">posi</string>

    <!-- Color Array -->
    <array name="color_array">
        <item>@color/color_1</item>
        <item>@color/color_2</item>
        <item>@color/color_3</item>
        <item>@color/color_4</item>
        <item>@color/color_5</item>
        <item>@color/color_7</item>
        <item>@color/color_6</item>
        <item>@color/color_8</item>
        <item>@color/color_9</item>
        <item>@color/color_11</item>
        <item>@color/color_10</item>
        <item>@color/color_12</item>
        <item>@color/color_13</item>
        <item>@color/color_14</item>
        <item>@color/color_15</item>

        <item>@color/color_16</item>
        <item>@color/color_17</item>
        <item>@color/color_18</item>
        <item>@color/color_20</item>
        <item>@color/color_21</item>
        <item>@color/color_22</item>
        <item>@color/color_24</item>
        <item>@color/color_23</item>
        <item>@color/color_19</item>
        <item>@color/color_25</item>
        <item>@color/color_26</item>
        <item>@color/color_27</item>
    <!--    <item>@color/color_28</item>-->
        <item>@color/color_29</item>
        <item>@color/color_30</item>
        <item>@color/color_31</item>
        <item>@color/color_32</item>
     <!--   <item>@color/color_33</item>-->
        <item>@color/color_34</item>
        <item>@color/color_35</item>
        <item>@color/color_36</item>
        <item>@color/color_37</item>
        <item>@color/color_38</item>
        <item>@color/color_39</item>
        <item>@color/color_40</item>
        <item>@color/color_41</item>
        <item>@color/color_42</item>
        <item>@color/color_43</item>
        <item>@color/color_44</item>
        <item>@color/color_45</item>
        <item>@color/color_46</item>
        <item>@color/color_47</item>
        <item>@color/color_50</item>
        <item>@color/color_49</item>
        <item>@color/color_48</item>
        <item>@color/color_51</item>
        <item>@color/color_52</item>
        <item>@color/color_53</item>
        <item>@color/color_54</item>
        <item>@color/color_55</item>
        <item>@color/color_56</item>
        <item>@color/color_57</item>


       <!-- <item name="White">@color/White</item>
        <item name="Ivory">@color/Ivory</item>
        <item name="LightYellow">@color/LightYellow</item>
        <item name="Yellow">@color/Yellow</item>
        <item name="Snow">@color/Snow</item>
        <item name="FloralWhite">@color/FloralWhite</item>
        <item name="LemonChiffon">@color/LemonChiffon</item>
        <item name="Cornsilk">@color/Cornsilk</item>
        <item name="Seashell">@color/Seashell</item>
        <item name="LavenderBlush">@color/LavenderBlush</item>
        <item name="PapayaWhip">@color/PapayaWhip</item>
        <item name="BlanchedAlmond">@color/BlanchedAlmond</item>
        <item name="MistyRose">@color/MistyRose</item>
        <item name="Bisque">@color/Bisque</item>
        <item name="Moccasin">@color/Moccasin</item>
        <item name="NavajoWhite">@color/NavajoWhite</item>
        <item name="PeachPuff">@color/PeachPuff</item>
        <item name="Gold">@color/Gold</item>
        <item name="Pink">@color/Pink</item>
        <item name="LightPink">@color/LightPink</item>
        <item name="Orange">@color/Orange</item>
        <item name="LightSalmon">@color/LightSalmon</item>
        <item name="DarkOrange">@color/DarkOrange</item>
        <item name="Coral">@color/Coral</item>
        <item name="HotPink">@color/HotPink</item>
        <item name="Tomato">@color/Tomato</item>
        <item name="OrangeRed">@color/OrangeRed</item>
        <item name="DeepPink">@color/DeepPink</item>
        <item name="Fuchsia">@color/Fuchsia</item>
        <item name="Magenta">@color/Magenta</item>
        <item name="Red">@color/Red</item>
        <item name="OldLace">@color/OldLace</item>
        <item name="LightGoldenrodYellow">@color/LightGoldenrodYellow</item>
        <item name="Linen">@color/Linen</item>
        <item name="AntiqueWhite">@color/AntiqueWhite</item>
        <item name="Salmon">@color/Salmon</item>
        <item name="GhostWhite">@color/GhostWhite</item>
        <item name="MintCream">@color/MintCream</item>
        <item name="WhiteSmoke">@color/WhiteSmoke</item>
        <item name="Beige">@color/Beige</item>
        <item name="Wheat">@color/Wheat</item>
        <item name="SandyBrown">@color/SandyBrown</item>
        <item name="Azure">@color/Azure</item>
        <item name="Honeydew">@color/Honeydew</item>
        <item name="AliceBlue">@color/AliceBlue</item>
        <item name="Khaki">@color/Khaki</item>
        <item name="LightCoral">@color/LightCoral</item>
        <item name="PaleGoldenrod">@color/PaleGoldenrod</item>
        <item name="Violet">@color/Violet</item>
        <item name="DarkSalmon">@color/DarkSalmon</item>
        <item name="Lavender">@color/Lavender</item>
        <item name="LightCyan">@color/LightCyan</item>
        <item name="BurlyWood">@color/BurlyWood</item>
        <item name="Plum">@color/Plum</item>
        <item name="Gainsboro">@color/Gainsboro</item>
        <item name="Crimson">@color/Crimson</item>
        <item name="PaleVioletRed">@color/PaleVioletRed</item>
        <item name="Goldenrod">@color/Goldenrod</item>
        <item name="Orchid">@color/Orchid</item>
        <item name="Thistle">@color/Thistle</item>
        <item name="LightGrey">@color/LightGrey</item>
        <item name="Tan">@color/Tan</item>
        <item name="Chocolate">@color/Chocolate</item>
        <item name="Peru">@color/Peru</item>
        <item name="IndianRed">@color/IndianRed</item>
        <item name="MediumVioletRed">@color/MediumVioletRed</item>
        <item name="Silver">@color/Silver</item>
        <item name="DarkKhaki">@color/DarkKhaki</item>
        <item name="RosyBrown">@color/RosyBrown</item>
        <item name="MediumOrchid">@color/MediumOrchid</item>
        <item name="DarkGoldenrod">@color/DarkGoldenrod</item>
        <item name="FireBrick">@color/FireBrick</item>
        <item name="PowderBlue">@color/PowderBlue</item>
        <item name="LightSteelBlue">@color/LightSteelBlue</item>
        <item name="PaleTurquoise">@color/PaleTurquoise</item>
        <item name="GreenYellow">@color/GreenYellow</item>
        <item name="LightBlue">@color/LightBlue</item>
        <item name="DarkGray">@color/DarkGray</item>
        <item name="Brown">@color/Brown</item>
        <item name="Sienna">@color/Sienna</item>
        <item name="YellowGreen">@color/YellowGreen</item>
        <item name="DarkOrchid">@color/DarkOrchid</item>
        <item name="PaleGreen">@color/PaleGreen</item>
        <item name="DarkViolet">@color/DarkViolet</item>
        <item name="MediumPurple">@color/MediumPurple</item>
        <item name="LightGreen">@color/LightGreen</item>
        <item name="DarkSeaGreen">@color/DarkSeaGreen</item>
        <item name="SaddleBrown">@color/SaddleBrown</item>
        <item name="DarkMagenta">@color/DarkMagenta</item>
        <item name="DarkRed">@color/DarkRed</item>
        <item name="BlueViolet">@color/BlueViolet</item>
        <item name="LightSkyBlue">@color/LightSkyBlue</item>
        <item name="SkyBlue">@color/SkyBlue</item>
        <item name="Gray">@color/Gray</item>
        <item name="Olive">@color/Olive</item>
        <item name="Purple">@color/Purple</item>
        <item name="Maroon">@color/Maroon</item>
        <item name="Aquamarine">@color/Aquamarine</item>
        <item name="Chartreuse">@color/Chartreuse</item>
        <item name="LawnGreen">@color/LawnGreen</item>
        <item name="MediumSlateBlue">@color/MediumSlateBlue</item>
        <item name="LightSlateGray">@color/LightSlateGray</item>
        <item name="SlateGray">@color/SlateGray</item>
        <item name="OliveDrab">@color/OliveDrab</item>
        <item name="SlateBlue">@color/SlateBlue</item>
        <item name="DimGray">@color/DimGray</item>
        <item name="MediumAquamarine">@color/MediumAquamarine</item>
        <item name="CornflowerBlue">@color/CornflowerBlue</item>
        <item name="CadetBlue">@color/CadetBlue</item>
        <item name="DarkOliveGreen">@color/DarkOliveGreen</item>
        <item name="Indigo">@color/Indigo</item>
        <item name="MediumTurquoise">@color/MediumTurquoise</item>
        <item name="DarkSlateBlue">@color/DarkSlateBlue</item>
        <item name="SteelBlue">@color/SteelBlue</item>
        <item name="RoyalBlue">@color/RoyalBlue</item>
        <item name="Turquoise">@color/Turquoise</item>
        <item name="MediumSeaGreen">@color/MediumSeaGreen</item>
        <item name="LimeGreen">@color/LimeGreen</item>
        <item name="DarkSlateGray">@color/DarkSlateGray</item>
        <item name="SeaGreen">@color/SeaGreen</item>
        <item name="ForestGreen">@color/ForestGreen</item>
        <item name="LightSeaGreen">@color/LightSeaGreen</item>
        <item name="DodgerBlue">@color/DodgerBlue</item>
        <item name="MidnightBlue">@color/MidnightBlue</item>
        <item name="Aqua">@color/Aqua</item>
        <item name="Cyan">@color/Cyan</item>
        <item name="SpringGreen">@color/SpringGreen</item>
        <item name="Lime">@color/Lime</item>
        <item name="MediumSpringGreen">@color/MediumSpringGreen</item>
        <item name="DarkTurquoise">@color/DarkTurquoise</item>
        <item name="DeepSkyBlue">@color/DeepSkyBlue</item>
        <item name="DarkCyan">@color/DarkCyan</item>
        <item name="Teal">@color/Teal</item>
        <item name="Green">@color/Green</item>
        <item name="DarkGreen">@color/DarkGreen</item>
        <item name="Blue">@color/Blue</item>
        <item name="MediumBlue">@color/MediumBlue</item>
        <item name="DarkBlue">@color/DarkBlue</item>
        <item name="Navy">@color/Navy</item>
        <item name="Black">@color/Black</item>-->
    </array>

    <integer-array name="shape_array">
        <item>@drawable/shape_1</item>
        <item>@drawable/shape_2</item>
        <item>@drawable/shape_3</item>
        <item>@drawable/shape_4</item>
        <item>@drawable/shape_5</item>
    </integer-array>

</resources>